--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-BOT_TOKEN=6065938741:AAFMXo-GFVEebQ54py5wkCLHSJ4tDKD3_GE
+BOT_TOKEN=
 PORT=3030
 POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
-POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=5432
-POSTGRES_DATABASE=zakaz_bot
-DB_URL=mongodb://127.0.0.1:27017/zakaz_bot
-BOT_ADMIN_1=686712790
-CLICK_TOKEN=398062629:TEST:999999999_F91D8F69C042267444B74CC0B3C747757EB0E065
+POSTGRES_USERNAME=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
+DB_URL=
+BOT_ADMIN_1=
+CLICK_TOKEN=
